external-crates/move/crates/move-compiler/tests/development/enums/matching/simple_enum_match.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/simple_enum_match.move:3:17
  │
3 │     public enum Box<T> { B { x: T } }
  │                 ^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

