external-crates/move/crates/move-compiler/tests/development/enums/matching/simple_enum_match.move
module 0x42::m {

    public enum Box<T> { B { x: T } }

    fun test(opt: Box<u8>) {
        match (opt) {
            Box::B { x: _ } => (),
        }
    }

}
